[package]
name = "hddrand"
version = "0.1.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Benchmark drive writes with non-compressible data or wipe disks with random content"
edition = "2018"
homepage = "https://github.com/mqudsi/hddrand/"
repository = "https://github.com/mqudsi/hddrand/"
readme = "README.md"
keywords = ["cryptography", "drive", "benchmarking", "security"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
size = "0.1.2"
