[package]
name = "hddrand"
version = "0.1.2"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Benchmark drive writes with non-compressible data or wipe disks with random content"
edition = "2018"
homepage = "https://github.com/mqudsi/hddrand/"
repository = "https://github.com/mqudsi/hddrand/"
readme = "README.md"
keywords = ["cryptography", "drive", "benchmarking", "security"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
size = "0.4.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = [ "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_System_Kernel" ] }
