[package]
name = "hddrand"
version = "0.2.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Benchmark drive writes with non-compressible data or wipe disks with random content"
edition = "2018"
homepage = "https://github.com/mqudsi/hddrand/"
repository = "https://github.com/mqudsi/hddrand/"
readme = "README.md"
keywords = ["cryptography", "drive", "benchmarking", "security"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
rand = "0.10.0"
rand_chacha = "0.10.0"
size = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_System_IO", "Wdk_Storage_FileSystem", "Wdk_Foundation", "Win32_Security"] }
